<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ImageKitRenderDemoActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/demo_title"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinner_animations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/Animations"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_play_animation"
            android:textSize="8dp"
            android:onClick="startAnimation"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/action_pause_animation"
            android:onClick="pauseAnimation"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/action_restart_animation"
            android:onClick="resumeAnimation"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/action_stop_animation"
            android:onClick="stopAnimation"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="8dp"
            android:text="@string/action_set_variable"
            android:onClick="setVariable"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="7dp"
            android:text="@string/action_nextpage"
            android:onClick="nextPage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/recordtype"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="1:video;2:gif;3:both"
            android:textSize="10sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/videoscale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="videoScale(0.5-1)"
            android:textSize="10sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/videofps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="videoFps(5-20)"
            android:textSize="10sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/gifscale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="gifScale(0.1-0.5)"
            android:textSize="10sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/giffps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="gifFps(10-20)"
            android:textSize="10sp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_start_record"
            android:textSize="8dp"
            android:onClick="startRecord"/>

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10dp"
            android:text="
            progress:"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_stop_record"
            android:textSize="8dp"
            android:onClick="stopRecord"/>
    </LinearLayout>
</FrameLayout>